src/test/ui/impl-trait/issue-72911.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/issue-72911.rs:12:33
   |
LL | fn gather_from_file(dir_entry: &foo::MissingItem) -> impl Iterator<Item = Lint> {
   |                                 ^^^ use of undeclared crate or module `foo`

error[E0433]: failed to resolve: use of undeclared crate or module `foo`
  --> $DIR/issue-72911.rs:17:41
   |
LL | fn lint_files() -> impl Iterator<Item = foo::MissingItem> {
   |                                         ^^^ use of undeclared crate or module `foo`

error[E0282]: type annotations needed
  --> $DIR/issue-72911.rs:7:24
   |
LL | pub fn gather_all() -> impl Iterator<Item = Lint> {
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0433.
For more information about an error, try `rustc --explain E0282`.
